# HotReloadingLibrary

./: CMakeLists.txt  README.md  bld.sh
include/: dylib.h
src/: libraryDefinition.h  main.cpp
src/libExample/: libMain.cpp
